--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -20,6 +20,15 @@
 
 
 
+@font-face {
+    font-family: 'proxima_novablack_italic';
+    src: url('../fonts/ProximaNova-BlackIt/proxima_nova_black_italic.woff2') format('woff2'),
+         url('../fonts/ProximaNova-BlackIt/proxima_nova_black_italic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 
 
 @font-face {
