--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -266,8 +266,11 @@ em strong
 .header{
 	&__inner{
 		position: relative;
-		height: 13rem;		
+		height: 14rem;		
 		z-index: 2;
+	}
+	.logo{
+		margin-right: 1rem;
 	}
 }
 
@@ -278,7 +281,7 @@ em strong
 	padding-left: 3rem;
 	font-size: 1.5rem;
 	li{
-		margin-right: 4rem;
+		margin-right: 4.8rem;
 		letter-spacing: 0.1em;
 		&:last-child{
 			margin-right: 0;
