--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -466,7 +466,7 @@ form{
 	}
 
 	.inner{
-		padding: 5rem 0 0 0;
+		padding: 5.5rem 0 0 0;
 		margin-left: 8rem;
 		position: absolute;
 		width: 32rem;
@@ -478,9 +478,9 @@ form{
 	}
 	.title{
 		font-family: 'proxima_novaextrabold_italic';
-		// font-weight: 700;
 		letter-spacing: .1em;
 		font-size: 3.4rem;
+		margin-bottom: 3rem;
 		text-transform: uppercase;
 	}
 	.text{
@@ -491,7 +491,7 @@ form{
 	}
 
 	.input-field{
-		margin-top: 1.3rem;
+		margin-top: 3.2rem;
 		label{
 			font-size: 1.7rem;
 		}
@@ -538,8 +538,8 @@ form{
 	background: none;
 	border: none;
 	position: absolute;
-	right: 0px;
-	top: 35px;
+	right: -7px;
+	top: 60px;
 	z-index: 99;
 	svg{
 		@include transition-param(transform)
