--- a/app/scss/_homepage.scss
+++ b/app/scss/_homepage.scss
@@ -192,7 +192,7 @@
 }
 
 
-@-webkit-keyframes pulsing2 {
+@-webkit-keyframes pulsing {
   0% {
     -webkit-transform: scale(0.9, 0.9);
     transform: scale(0.9, 0.9)
@@ -207,7 +207,7 @@
   }
 }
 
-@keyframes pulsing2 {
+@keyframes pulsing {
   0% {
     -webkit-transform: scale(0.9, 0.9);
     transform: scale(0.9, 0.9)
