--- a/app/scss/_homepage.scss
+++ b/app/scss/_homepage.scss
@@ -1,19 +1,23 @@
-.homepage{
-	position: relative;
+.angle{
+	position: fixed;
+	right: 0;
+	top: 0;
 	height: 100vh;
-	overflow: hidden;
-	.grid{
-	}
-	.grid:after{
+	width: 600px;
+	&:after{
 		@extend .before;
 		height: 0;
 		width: 0;
-		right: 0;
-		top: 0;
-		border-top: 105vh solid #0a0b0b; 
+		top: 0;		
+		border-top: 115vh solid #0a0b0b; 
 		border-left: 600px solid transparent;
 		z-index: 1;
-	}
+	}	
+}
+
+.homepage{
+	position: relative;
+	// height: 100vh;
 	.intro{
 		margin-left: calc((100% - 1600px)/2);
 		padding-left: 9.5rem;
@@ -100,9 +104,7 @@
 		left: -5px;
 		bottom: -162px;
 		font-size: 1.5rem;
-		&:before,
-		&:after{
-		}
+		width: 21rem;
 		@extend .vline;
 		&:before{
 			height: 80px;
