--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1027,21 +1027,26 @@ form .form-control {
   .homepage .content {
     width: 100%; }
   .homepage .right {
-    width: 480px;
+    width: 525px;
     position: relative;
     top: -87px; }
     .homepage .right:before {
       height: 140px;
-      left: -110px;
+      left: -60px;
       top: 20px; }
     .homepage .right .prevnext {
       position: absolute;
-      left: -40px;
-      bottom: 88px; }
+      left: 16px;
+      bottom: 88px;
+      z-index: 100; }
     .homepage .right .new-title {
+      box-shadow: 0 0 20px #030C17;
+      background: #030C17;
       position: absolute;
-      left: -56px;
-      top: 20px; }
+      left: 0;
+      top: 20px;
+      height: 395px;
+      z-index: 99; }
   .homepage .counter {
     position: absolute;
     left: -5px;
