--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -970,6 +970,23 @@ form .form-control {
   .modal-menu .lang a:hover {
     border-bottom: 2px solid #fff; }
 
+.nicescroll-cursors {
+  border: none !important;
+  background: #00b4a9 !important;
+  border-radius: 8px !important;
+  width: 9px !important;
+  left: 2px; }
+
+.nicescroll-rails {
+  left: calc(100% - 12px) !important;
+  background: #000;
+  width: 5px !important;
+  border-radius: 10px; }
+
+.selectize-dropdown-content {
+  margin-top: 10px;
+  margin-bottom: 10px; }
+
 .angle {
   position: fixed;
   right: 0;
@@ -1037,18 +1054,18 @@ form .form-control {
     .homepage .right .prevnext {
       position: absolute;
       left: 47px;
-      bottom: 88px;
+      bottom: 100px;
       z-index: 100; }
     .homepage .right .new-title {
-      box-shadow: 0 0 20px #030C17;
-      background: #030C17;
+      background: #13242b;
       position: absolute;
       left: 0;
       top: 20px;
-      width: 105px;
+      width: 110px;
       height: 395px;
       z-index: 99;
-      padding-left: 25px; }
+      padding-left: 25px;
+      padding-top: 18px; }
   .homepage .counter {
     position: absolute;
     left: -5px;
