--- a/app/scss/_homepage.scss
+++ b/app/scss/_homepage.scss
@@ -96,19 +96,20 @@
 		.prevnext{
 			position: absolute;
 			left: 47px;
-			bottom: 88px;
+			bottom: 100px;
 			z-index: 100;
 		}
 		.new-title{
-			box-shadow: 0 0 20px #030C17;
-			background: #030C17;
+			// box-shadow: 0 0 20px #030C17;
+			background: $color9;
 			position: absolute;
 			left: 0;
 			top: 20px;
-			width: 105px;
+			width: 110px;
 			height: 395px;
 			z-index: 99;
 			padding-left: 25px;
+			padding-top: 18px;
 		}
 	}
 
