--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -6,6 +6,8 @@
 @import 'flex';
 @import 'sprite';
 @import 'base';
+@import 'inner';
+// @import 'news';
 @import 'homepage';
 @import 'mobmenu';
 @import 'slick';
